loki/secret.yml
# Declaring the user list
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: loki-auth
spec:
  basicAuth:
    secret: loki-basic-auth
